Migrate to io.github.sentinel package and pin transitive deps for CVEs
Sentinel's Maven coordinates moved from com.dougnoel:sentinel to
io.github.sentinel:sentinel (1.0.14-SNAPSHOT), so all imports and the
Cucumber glue path are updated to match. Also adds dependencyManagement
overrides pinning several transitive dependencies (jackson, snakeyaml,
gson, guava, okhttp/okio, commons-*, log4j, spring, etc.) to versions
that resolve known CVEs.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>